@@ -1,0 +1,21 @@
+
+table th:nth-child(2) {
+    width: 150px;
+    color: red;
+}
+
+table th:nth-child(3) {
+    width: 150px;
+}
+
+table th:nth-child(4) {
+    width: 150px;
+}
+
+table th {
+    text-align: center;
+}
+
+table {
+    text-align: center;
+}
