@@ -1,3 +1,5 @@
+########### 2015-10-20 #################
+alter table supplychain_hot_product add column proid int(11) default 0;
 ########### 2015-10-19 #################
 alter table supplier_sale_product_praise add column pro_from int(11) default 0;
 alter table supplychain_supply_product add voting boolean NOT NULL default False;
